[gd_scene load_steps=37 format=2]

[ext_resource path="res://Screens/Hub2.0.gd" type="Script" id=1]
[ext_resource path="res://Sounds/Arithmatica icing.wav" type="AudioStream" id=2]
[ext_resource path="res://Images/blank.png" type="Texture" id=3]
[ext_resource path="res://Images/Top bar/Calculator.png" type="Texture" id=4]
[ext_resource path="res://Images/Fonts/Calculator.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Screens/Calculator.gd" type="Script" id=6]
[ext_resource path="res://Images/Top bar/Sound/Music.png" type="Texture" id=7]
[ext_resource path="res://Screens/Sound.gd" type="Script" id=8]
[ext_resource path="res://Screens/Hint.gd" type="Script" id=9]
[ext_resource path="res://Images/Fonts/Calibri Family/calibriz.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Parts/Modes.tscn" type="PackedScene" id=11]
[ext_resource path="res://Images/Top bar/Modes/Triangle.png" type="Texture" id=12]
[ext_resource path="res://Screens/Reset.gd" type="Script" id=13]
[ext_resource path="res://Images/Fonts/Calibri Family/calibrib.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://Images/Fonts/Calibri Family/calibrii.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://Screens/HighScore.gd" type="Script" id=16]
[ext_resource path="res://Screens/Solved_100.gd" type="Script" id=17]
[ext_resource path="res://Images/Stackup/Screen_white.png" type="Texture" id=18]
[ext_resource path="res://Images/Stackup/Screen_front.png" type="Texture" id=19]
[ext_resource path="res://Images/Level/Background.png" type="Texture" id=20]
[ext_resource path="res://Images/Level/Operator_holder.png" type="Texture" id=21]
[ext_resource path="res://Images/Level/InFront.png" type="Texture" id=22]
[ext_resource path="res://Screens/Miscellaneous.gd" type="Script" id=23]

[sub_resource type="DynamicFont" id=1]
size = 450
use_mipmaps = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
size = 60
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 15 )

[sub_resource type="Animation" id=6]
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../TipsContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Tips_end"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../TipsContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Appear"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../TipsContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Disappear"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../TipsContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=10]
size = 70
use_mipmaps = true
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=11]
size = 40
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=12]
size = 80
font_data = ExtResource( 14 )

[sub_resource type="Animation" id=13]
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../TipsContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Hub" type="Node"]
script = ExtResource( 1 )

[node name="Audio_Player" type="AudioStreamPlayer" parent="."]

[node name="Audio_Player_2" type="AudioStreamPlayer" parent="."]

[node name="Music_Player" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Music_Player_2" type="AudioStreamPlayer" parent="."]

[node name="BaseContainer" type="Container" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ModesScreen" type="TextureButton" parent="BaseContainer"]
visible = false
margin_left = 8.0
margin_right = 548.0
margin_bottom = 950.0
texture_normal = ExtResource( 3 )
expand = true

[node name="VerticalContainer" type="VBoxContainer" parent="BaseContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 540, 0 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Upper" type="Container" parent="BaseContainer/VerticalContainer"]
margin_right = 540.0
margin_bottom = 277.0
rect_min_size = Vector2( 540, 277 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="High" type="Container" parent="BaseContainer/VerticalContainer/Upper"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -270.0
margin_top = -50.5
margin_right = 270.0
margin_bottom = 49.5
rect_min_size = Vector2( 540, 100 )
mouse_filter = 2

[node name="CalculatorContainer" type="Container" parent="BaseContainer/VerticalContainer/Upper/High"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = -50.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 2

[node name="Calculator" type="Sprite" parent="BaseContainer/VerticalContainer/Upper/High/CalculatorContainer"]
position = Vector2( 0, 54.2443 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="BaseContainer/VerticalContainer/Upper/High/CalculatorContainer/Calculator"]
margin_left = -1245.0
margin_top = -266.0
margin_right = 770.0
margin_bottom = 318.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.351563, 0.351563, 0.351563, 1 )
text = "0"
align = 2
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="BaseContainer/VerticalContainer/Upper/High/CalculatorContainer/Calculator/Label"]
wait_time = 0.05

[node name="LeftOption" type="Container" parent="BaseContainer/VerticalContainer/Upper/High"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -41.0
margin_right = 106.0
margin_bottom = 45.0

[node name="Sound" type="TextureButton" parent="BaseContainer/VerticalContainer/Upper/High/LeftOption"]
modulate = Color( 0.847059, 0.847059, 0.847059, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.5
margin_top = -37.0
margin_right = 359.5
margin_bottom = 363.0
rect_scale = Vector2( 0.19, 0.19 )
texture_normal = ExtResource( 7 )
script = ExtResource( 8 )

[node name="RightOption" type="Container" parent="BaseContainer/VerticalContainer/Upper/High"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -105.0
margin_top = -38.0
margin_right = -11.0
margin_bottom = 48.0

[node name="Hint" type="TextureButton" parent="BaseContainer/VerticalContainer/Upper/High/RightOption"]
margin_left = 15.0
margin_top = 6.0
margin_right = 415.0
margin_bottom = 406.0
rect_scale = Vector2( 0.18, 0.18 )
texture_normal = ExtResource( 3 )
script = ExtResource( 9 )

[node name="Tween" type="Tween" parent="BaseContainer/VerticalContainer/Upper/High/RightOption/Hint"]

[node name="Label" type="Label" parent="BaseContainer/VerticalContainer/Upper/High/RightOption"]
self_modulate = Color( 0.742188, 0.742188, 0.742188, 1 )
margin_left = 8.0
margin_top = 7.0
margin_right = 102.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1

[node name="Top" type="Container" parent="BaseContainer/VerticalContainer/Upper"]
anchor_right = 1.0
rect_min_size = Vector2( 540, 100 )
mouse_filter = 2

[node name="Modes" type="Container" parent="BaseContainer/VerticalContainer/Upper/Top"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -50.0
margin_right = 180.0
margin_bottom = 50.0
rect_min_size = Vector2( 180, 0 )
mouse_filter = 2

[node name="Levels" parent="BaseContainer/VerticalContainer/Upper/Top/Modes" instance=ExtResource( 11 )]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -83.0
margin_top = -23.0
margin_right = 87.0
margin_bottom = 23.0
current_mode = true

[node name="Sprite" type="Sprite" parent="BaseContainer/VerticalContainer/Upper/Top/Modes/Levels"]
modulate = Color( 0.458824, 0.466667, 0.768627, 1 )
position = Vector2( 153.813, 29.9837 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 12 )

[node name="Tween" type="Tween" parent="BaseContainer/VerticalContainer/Upper/Top/Modes/Levels"]

[node name="Stacks" parent="BaseContainer/VerticalContainer/Upper/Top/Modes" instance=ExtResource( 11 )]
editor/display_folded = true
visible = false
margin_left = 7.0
margin_top = 71.0
margin_right = 160.0
margin_bottom = 129.0
rect_scale = Vector2( 0, 0 )
value = "Stacks"

[node name="Levels3" parent="BaseContainer/VerticalContainer/Upper/Top/Modes" instance=ExtResource( 11 )]
visible = false
margin_left = 8.0
margin_top = 119.0
margin_right = 160.0
margin_bottom = 181.0
rect_scale = Vector2( 0, 0 )
value = "Infinity"

[node name="ModesTimer" type="Timer" parent="BaseContainer/VerticalContainer/Upper/Top/Modes"]
wait_time = 0.25

[node name="ResetContainer" type="Container" parent="BaseContainer/VerticalContainer/Upper/Top"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -180.0
margin_bottom = 100.0

[node name="Reset" type="TextureButton" parent="BaseContainer/VerticalContainer/Upper/Top/ResetContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -99.0
margin_top = -48.0
margin_right = 84.0
margin_bottom = 39.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
expand = true
script = ExtResource( 13 )

[node name="Label" type="Label" parent="BaseContainer/VerticalContainer/Upper/Top/ResetContainer/Reset"]
margin_left = 22.0
margin_top = 22.0
margin_right = 189.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.92549, 0.356863, 0.356863, 1 )
text = "Reset"
align = 1
valign = 1

[node name="Tween" type="Tween" parent="BaseContainer/VerticalContainer/Upper/Top/ResetContainer/Reset"]

[node name="HighScore" type="Label" parent="BaseContainer/VerticalContainer/Upper/Top/ResetContainer"]
editor/display_folded = true
margin_left = 9.0
margin_top = 25.0
margin_right = 174.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.429688, 0.429688, 0.429688, 1 )
text = "Highscore"
align = 1
autowrap = true
script = ExtResource( 16 )

[node name="Tween" type="Tween" parent="BaseContainer/VerticalContainer/Upper/Top/ResetContainer/HighScore"]

[node name="GoalContainer" type="Container" parent="BaseContainer/VerticalContainer/Upper"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -270.0
margin_top = -95.0
margin_right = 270.0
margin_bottom = 8.0
rect_min_size = Vector2( 540, 100 )
mouse_filter = 2

[node name="Solved_100" type="Label" parent="BaseContainer/VerticalContainer/Upper/GoalContainer"]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -16.5
margin_right = 86.0
margin_bottom = 14.5
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.332031, 0.332031, 0.332031, 1 )
text = "Solved:"
script = ExtResource( 17 )

[node name="Tween" type="Tween" parent="BaseContainer/VerticalContainer/Upper/GoalContainer/Solved_100"]

[node name="Container" type="Container" parent="BaseContainer/VerticalContainer/Upper/GoalContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="GoalContainer" type="Node2D" parent="BaseContainer/VerticalContainer/Upper/GoalContainer/Container"]
position = Vector2( 0, -1.79622 )

[node name="Mid" type="Container" parent="BaseContainer/VerticalContainer"]
margin_top = 281.0
margin_right = 540.0
margin_bottom = 681.0
rect_min_size = Vector2( 540, 400 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Container" type="Container" parent="BaseContainer/VerticalContainer/Mid"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = 16.0
margin_bottom = 16.0
mouse_filter = 2

[node name="Screen" type="Sprite" parent="BaseContainer/VerticalContainer/Mid/Container"]
scale = Vector2( 0.24, 0.24 )
z_index = -5
texture = ExtResource( 18 )

[node name="ScreenFront" type="Sprite" parent="BaseContainer/VerticalContainer/Mid/Container"]
scale = Vector2( 0.24, 0.24 )
z_index = -3
texture = ExtResource( 19 )

[node name="Bottom" type="Sprite" parent="BaseContainer/VerticalContainer/Mid/Container"]
position = Vector2( 0, 375.579 )
scale = Vector2( 1.32159, 0.800332 )
z_index = -2
texture = ExtResource( 20 )

[node name="Right" type="Sprite" parent="BaseContainer/VerticalContainer/Mid/Container"]
position = Vector2( 502.145, -4.14462 )
scale = Vector2( 1.32159, 1.10432 )
z_index = -2
texture = ExtResource( 20 )

[node name="Left" type="Sprite" parent="BaseContainer/VerticalContainer/Mid/Container"]
position = Vector2( -503.372, -4.14462 )
scale = Vector2( 1.32159, 1.10432 )
z_index = -2
texture = ExtResource( 20 )

[node name="Top" type="Sprite" parent="BaseContainer/VerticalContainer/Mid/Container"]
position = Vector2( -9.72064, -436.207 )
scale = Vector2( 2.18308, 1.10749 )
z_index = -2
texture = ExtResource( 20 )

[node name="Block" type="TextureRect" parent="BaseContainer/VerticalContainer/Mid/Container"]
visible = false
margin_left = -238.0
margin_top = -210.0
margin_right = 240.0
margin_bottom = 215.0
texture = ExtResource( 3 )
expand = true

[node name="Bottom" type="Container" parent="BaseContainer/VerticalContainer"]
margin_top = 685.0
margin_right = 540.0
margin_bottom = 950.0
rect_min_size = Vector2( 540, 180 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Container" type="Container" parent="BaseContainer/VerticalContainer/Bottom"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
mouse_filter = 2

[node name="Left" type="Sprite" parent="BaseContainer/VerticalContainer/Bottom/Container"]
position = Vector2( -493.884, 0.410095 )
scale = Vector2( 1.32304, 0.38062 )
texture = ExtResource( 20 )

[node name="Right" type="Sprite" parent="BaseContainer/VerticalContainer/Bottom/Container"]
position = Vector2( 495.048, -1.73865 )
scale = Vector2( 1.31888, 0.369876 )
texture = ExtResource( 20 )

[node name="Sprite" type="Sprite" parent="BaseContainer/VerticalContainer/Bottom/Container"]
position = Vector2( 0, -2.37036 )
scale = Vector2( 0.3, 0.3 )
z_index = -2
texture = ExtResource( 21 )

[node name="Sprite2" type="Sprite" parent="BaseContainer/VerticalContainer/Bottom/Container"]
position = Vector2( 0, -2.37 )
scale = Vector2( 0.3, 0.3 )
z_index = -1
texture = ExtResource( 22 )

[node name="TipsScreen" type="Container" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Sprite" type="TextureRect" parent="TipsScreen"]
modulate = Color( 1, 1, 1, 0.911608 )
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 20 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="TipsScreen"]
anims/Tips = SubResource( 6 )
anims/Tips_end = SubResource( 7 )

[node name="Loading_screen" type="Container" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Sprite" type="TextureRect" parent="Loading_screen"]
modulate = Color( 1, 1, 1, 0.911608 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 20 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Loading_screen"]
anims/Appear = SubResource( 8 )
anims/Disappear = SubResource( 9 )

[node name="Label" type="Label" parent="Loading_screen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.0
margin_top = -35.5
margin_right = 106.0
margin_bottom = 35.5
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.53125, 0.53125, 0.53125, 1 )
text = "Loading"

[node name="TipsContainer" type="Container" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Container" type="Container" parent="TipsContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="TipsNode" type="Node2D" parent="TipsContainer/Container"]

[node name="Tips" type="Label" parent="TipsContainer/Container/TipsNode"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -257.0
margin_top = -197.0
margin_right = 192.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 228.656, 109.4 )
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.316406, 0.316406, 0.316406, 1 )
align = 1
autowrap = true
clip_text = true

[node name="Miscellaneous" type="Container" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 23 )

[node name="Sprite" type="TextureRect" parent="Miscellaneous"]
modulate = Color( 1, 1, 1, 0.917137 )
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 20 )
expand = true

[node name="FinalScore" type="Label" parent="Miscellaneous"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -179.5
margin_top = -115.5
margin_right = 179.5
margin_bottom = 43.5
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0.398438, 0.398438, 0.398438, 1 )
text = "Final Score"
align = 1

[node name="Tween" type="Tween" parent="Miscellaneous"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Miscellaneous"]
anims/Tips = SubResource( 13 )

[node name="StackUpReset" type="TextureButton" parent="Miscellaneous"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -58.5
margin_top = 49.5
margin_right = 93.5
margin_bottom = 94.5
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
expand = true
script = ExtResource( 13 )

[node name="Label" type="Label" parent="Miscellaneous/StackUpReset"]
margin_left = -20.0
margin_top = -2.0
margin_right = 150.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.92549, 0.356863, 0.356863, 1 )
text = "Reset"
align = 1
valign = 1

[node name="Tween" type="Tween" parent="Miscellaneous/StackUpReset"]

[node name="Block" type="TextureRect" parent="."]
anchor_right = 1.0
margin_bottom = 739.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true

[node name="Tween" type="Tween" parent="."]

[node name="HintTimer" type="Timer" parent="."]

[node name="TransitionTimer" type="Timer" parent="."]
wait_time = 0.2
[connection signal="finished" from="Music_Player" to="." method="_on_Music_Player_finished"]
[connection signal="finished" from="Music_Player_2" to="." method="_on_Music_Player_2_finished"]
[connection signal="pressed" from="BaseContainer/ModesScreen" to="." method="_on_ModesScreen_pressed"]
[connection signal="button_down" from="BaseContainer/VerticalContainer/Upper/High/LeftOption/Sound" to="BaseContainer/VerticalContainer/Upper/High/LeftOption/Sound" method="_on_Sound_button_down"]
[connection signal="button_up" from="BaseContainer/VerticalContainer/Upper/High/LeftOption/Sound" to="BaseContainer/VerticalContainer/Upper/High/LeftOption/Sound" method="_on_Sound_button_up"]
[connection signal="pressed" from="BaseContainer/VerticalContainer/Upper/High/LeftOption/Sound" to="BaseContainer/VerticalContainer/Upper/High/LeftOption/Sound" method="_on_Sound_pressed"]
[connection signal="button_down" from="BaseContainer/VerticalContainer/Upper/High/RightOption/Hint" to="BaseContainer/VerticalContainer/Upper/High/RightOption/Hint" method="_on_Hint_button_down"]
[connection signal="button_up" from="BaseContainer/VerticalContainer/Upper/High/RightOption/Hint" to="BaseContainer/VerticalContainer/Upper/High/RightOption/Hint" method="_on_Hint_button_up"]
[connection signal="pressed" from="BaseContainer/VerticalContainer/Upper/High/RightOption/Hint" to="." method="_on_Hint_pressed"]
[connection signal="button_down" from="BaseContainer/VerticalContainer/Upper/Top/ResetContainer/Reset" to="." method="_on_Reset_button_down"]
[connection signal="button_up" from="BaseContainer/VerticalContainer/Upper/Top/ResetContainer/Reset" to="." method="_on_Reset_button_up"]
[connection signal="pressed" from="BaseContainer/VerticalContainer/Upper/Top/ResetContainer/Reset" to="." method="_on_Reset_pressed"]
[connection signal="gui_input" from="TipsScreen" to="." method="_on_TipsScreen_gui_input"]
[connection signal="pressed" from="Miscellaneous/StackUpReset" to="Miscellaneous" method="_on_StackUpReset_pressed"]
